# py-calc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
string_calculator/: calculator.py
tests/: test_calculator.py
