[tool.poetry]
name = "string-calculator"
version = "0.1.0"
description = "TDD Kata: String Calculator"
authors = ["vidhyakv"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "."
]